cluster/core/traefik/error-pages/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: error-pages
  namespace: traefik-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`{host:.+}`)
      priority: 1
      middlewares:
        - name: error-pages
          namespace: traefik-system
      services:
        - kind: Service
          name: error-pages
          namespace: traefik-system
          port: 8080
